<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="trans"
            type="com.example.domain.models.Transaction" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="10dp"
        >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/account_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textSize="15sp"
        android:text="@{trans.account_name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView40"
        app:layout_constraintTop_toTopOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        android:text="@{String.valueOf(trans.amount)}"
        app:layout_constraintEnd_toStartOf="@+id/textView45"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="15sp"
        android:text="@{trans.memo}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView43" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/memo"
        app:layout_constraintEnd_toStartOf="@+id/textView44"
        app:layout_constraintTop_toTopOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView43"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        android:text="@{trans.date}"
        app:layout_constraintEnd_toStartOf="@+id/textView48"
        app:layout_constraintStart_toEndOf="@+id/textView46"
        app:layout_constraintTop_toTopOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@{trans.cleared}"
        app:layout_constraintEnd_toEndOf="@+id/textView44"
        app:layout_constraintTop_toTopOf="@+id/textView47" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>